# django-admin-json-compare

./: .gitignore  README.md  pyproject.toml
.github/workflows/: django.yml
config/: local_sample.py  settings.py
django_admin_json_compare/: __init__.py  json_compare.py
json_stuff/: admin.py  apps.py  models.py
json_stuff/migrations/: 0001_initial.py
json_stuff/static/: json_compare.css
