[tool.poetry]
name = "django_admin_json_compare"
version = "0.1.0"
description = ""
authors = ["Ash Crow <sylvain@ashtree.eu>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
psycopg2 = "^2.9.3"
deepdiff = "^5.7.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
ipython = "^8.1.1"
django-extensions = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
